[tool.poetry]
name = "wsbus"
version = "0.1.0"
description = ""
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
packages = [
    { include = "src" }
]
classifiers = [
    "Private :: Do Not Upload"
]

[tool.poetry.dependencies]
python = "^3.11"
orwynn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^7.4.3"
coverage = "^7.3.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
